# dmf-player

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  datareader.cpp  datareader.h  dmf.cpp  dmf.h  frequency.inc  main.cpp  mul.inc  mul.tables.c  pce.cpp  pce.h  pcewriter.cpp  pcewriter.h  player.asm  player_standalone.asm  sin.inc  sin.table.c
.build/: frequency.inc
data/: most_def.dmf  snakerider.dmf  test00.dmf  test00.vgm
doc/: DMF_SPECS_0x12.txt  DMF_SPECS_0x13.txt  DMF_SPECS_0x15.txt  DMF_SPECS_0x17.txt  DMF_SPECS_0x18.txt
extra/: vgm2asm.cpp  vol_env_01.vgm
pce/: player.asm  player.h  player_standalone.asm  task_manager.asm
